Add logging to controllers and services